--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.1",
     "cookie-parser": "~1.4.3",
+    "dateformat": "^3.0.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.3.0",
+    "moment": "^2.22.0",
+    "moment-timezone": "^0.5.14",
     "mongoose": "^4.9.3",
     "morgan": "^1.9.0",
     "passport": "^0.3.2",
